# Image_Classification

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: train_cnn.py  train_mlp.py  train_resnet.py  train_test_on_mnist.py  train_vit.py
src/mnist_cnn/: mnist_cnn.cpp  mnist_cnn.py  model.py
src/mnist_mlp/: mnist_mlp.cpp  mnist_mlp.h  mnist_mlp.py  model.py
src/mnist_resnet/: mnist_resnet.cpp  mnist_resnet.h  mnist_resnet.py  model.py
src/mnist_vit/: attention.py  model.py  model_vit.py  test_attention.py  test_model.py  train_vit.py  transformer.py  vit.py
src/single_label_classification/mnist_cnn/: CMakeLists.txt  mnist_cnn.cpp  mnist_cnn.h  mnist_cnn.py
src/single_label_classification/mnist_mlp/: CMakeLists.txt  mnist_mlp.cpp  mnist_mlp.h
src/single_label_classification/mnist_resnet/: CMakeLists.txt  mnist_resnet.cpp  mnist_resnet.h
test/: test_libtorch_cnn_mnist.cpp  test_libtorch_mlp_mnist.cpp  test_libtorch_resnet_mnist.cpp
